# runtime-resume.io

./: .gitignore  README.md  runtime-resume-spec.md  runtimeresume_pipeline_spec_v1.docx
services/pipeline-api/: .env.example  README.md  alembic.ini  pyproject.toml  run_automation_jobs_once.py  run_role_match_once.py  seed_local_candidate.py
services/pipeline-api/app/: __init__.py  config.py  db.py  main.py  time.py
services/pipeline-api/app/api/: deps.py  router.py
services/pipeline-api/app/api/routes/: cv_guide.py  dashboard.py  dashboard_auth.py  health.py  intake.py  (+2 more)
services/pipeline-api/app/jobs/: __init__.py  placed_followup.py  refresh_offer.py  role_match.py  share_prompt.py
services/pipeline-api/app/models/: __init__.py  domain.py
services/pipeline-api/app/schemas/: auth.py  intake.py
services/pipeline-api/app/services/: auth.py  candidates.py  cv_guide.py  cv_products.py  email.py  notifications.py  opencats.py  orders.py  qdrant.py  referrals.py  representation.py  resume_storage.py  role_match.py  stripe.py
services/pipeline-api/data/: placed-followup-feed.json  role-match-feed.json
services/pipeline-api/migrations/: env.py
services/pipeline-api/migrations/versions/: 20260405_0001_initial_pipeline_schema.py  20260426_0002_stripe_gateway.py
services/pipeline-api/runtime_resume_pipeline_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/pipeline-api/tests/: test_automation_jobs.py  test_notifications.py  test_referrals.py  test_resume_storage.py  test_role_match.py
services/pipeline-worker/: README.md  pyproject.toml  worker.py
(+169 files in other folders)
