[project]
name = "runtime-resume-pipeline-api"
version = "0.1.0"
description = "FastAPI service for RunTime Resume candidate pipeline, auth, scheduling hooks, and email orchestration."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "apscheduler>=3.10.4",
  "boto3>=1.34.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "jinja2>=3.1.4",
  "pydantic-settings>=2.6.1",
  "pymysql>=1.1.1",
  "qdrant-client>=1.15.1",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
