[project]
name = "runtime-resume-pipeline-worker"
version = "0.1.0"
description = "APScheduler worker for RunTime Resume pipeline jobs."
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

